# NvFlux

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  install.sh  nvflux.c  setup.sh  uninstall.sh
completions/fish/: nvflux.fish
completions/zsh/: _nvflux
docs/: INSTALLATION.md  SECURITY.md
examples/: profile-switcher.sh  rofi-launcher.sh
include/: hw.h  nvflux.h
man/: nvflux.1
scripts/: check-deps.sh  install.sh  setup-audio.sh  uninstall.sh
src/: exec.c  exec.h  gpu.c  gpu.h  hw.c  main.c  nvflux.c  state.c  state.h
tests/: test_nvflux.c
